--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "19:17:44 INFO:__main__: Loading Data...\n",
-      "19:17:44 INFO:__main__: Loading model...\n",
-      "19:17:44 INFO:__main__: Seraparating dataset into train and test\n"
+      "20:00:30 INFO:__main__: Loading Data...\n",
+      "20:00:30 INFO:__main__: Loading model...\n",
+      "20:00:30 INFO:__main__: Seraparating dataset into train and test\n"
      ]
     }
    ],
@@ -27,6 +27,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
+    "import json\n",
     "#import seaborn as sns\n",
     "#import matplotlib.pyplot as plt\n",
     "\n",
@@ -68,50 +69,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'opening_gross': 0.612700330030501,\n",
-       " 'screens': 0.9873942734958421,\n",
-       " 'production_budget': 0.9348209044422333,\n",
-       " 'title_year': -0.03656845434244162,\n",
-       " 'aspect_ratio': 0.7744997058770637,\n",
-       " 'duration': -1.1367928651989376,\n",
-       " 'cast_total_facebook_likes': 0.7265345673123926,\n",
-       " 'budget': 0.8637056193531543,\n",
-       " 'imdb_score': 0.17341230357450654}"
+       "'{\"opening_gross\": -0.7263681741853496, \"screens\": -1.0480550280002798, \"production_budget\": -1.1175815899923822, \"title_year\": 1.0642783300672123, \"aspect_ratio\": 0.7744997058770637, \"duration\": -1.8562183192466573, \"cast_total_facebook_likes\": -1.4954136408656198, \"budget\": -1.068243062268003, \"imdb_score\": -1.949377858583951}'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test.iloc[100].to_dict()"
+    "json.dumps(X_test.iloc[0].to_dict())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5263053888526916"
+       "{1640: {'opening_gross': -0.7263681741853496,\n",
+       "  'screens': -1.0480550280002798,\n",
+       "  'production_budget': -1.1175815899923822,\n",
+       "  'title_year': 1.0642783300672123,\n",
+       "  'aspect_ratio': 0.7744997058770637,\n",
+       "  'duration': -1.8562183192466573,\n",
+       "  'cast_total_facebook_likes': -1.4954136408656198,\n",
+       "  'budget': -1.068243062268003,\n",
+       "  'imdb_score': -1.949377858583951}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_test.iloc[100]"
+    "X_test.iloc[[0]].to_dict(orient=\"index\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.1614833285743837"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.iloc[0]"
    ]
   },
   {
@@ -131,6 +152,23 @@
     "  \"budget\": -1.068243062268003,\n",
     "  \"imdb_score\": -1.949377858583951\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\"opening_gross\": 0.612700330030501,\n",
+    " \"screens\": 0.9873942734958421,\n",
+    " \"production_budget\": 0.9348209044422333,\n",
+    " \"title_year\": -0.03656845434244162,\n",
+    " \"aspect_ratio\": 0.7744997058770637,\n",
+    " \"duration\": -1.1367928651989376,\n",
+    " \"cast_total_facebook_likes\": 0.7265345673123926,\n",
+    " \"budget\": 0.8637056193531543,\n",
+    " \"imdb_score\": 0.17341230357450654}"
    ]
   },
   {
@@ -164,11 +202,62 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# From a classmate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "\n",
+    "Xsample = X_test.sample(3, random_state=42)\n",
+    "Xsample = Xsample.to_dict(orient=\"index\")\n",
+    "\n",
+    "Ysample = pd.DataFrame(y_test.sample(3, random_state=42))\n",
+    "Ysample.columns = [\"worldwide_gross\"]\n",
+    "Ysample = Ysample.to_dict(orient=\"index\")\n",
+    "\n",
+    "\n",
+    "with open('../api/sample_to_test_API.txt', 'w') as convert_file:\n",
+    "    convert_file.write(\"Tomamos 3 muestras aleatorias con la misma seed para hacer un test del modelo en FastAPI \\n \\n\")\n",
+    "    convert_file.write(\"# input dict: \\n\")\n",
+    "    convert_file.write(json.dumps(Xsample) + \"\\n \\n\")\n",
+    "    convert_file.write(\"# output dict: \\n\")\n",
+    "    convert_file.write(json.dumps(Ysample))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "xsamples = X_test.sample(3, random_state=42)\n",
+    "xsamples = xsamples.to_dict(orient=\"index\")\n",
+    "\n",
+    "ysample = pd.DataFrame(y_test.sample(3, random_state=42))\n",
+    "ysample.columns = [\"worldwide_gross\"]\n",
+    "ysample = ysample.to_dict(orient=\"index\")\n",
+    "\n",
+    "\n",
+    "with open('../api/sample_to_test_API.txt', 'w') as convert_file:\n",
+    "    convert_file.write(\"Tomamos 3 muestras aleatorias con la misma seed para hacer un test del modelo en FastAPI \\n \\n\")\n",
+    "    convert_file.write(\"# input dict: \\n\")\n",
+    "    for number_sample, value_x_sample in xsamples.items():\n",
+    "        convert_file.write(f'Sample number: {number_sample}' + '\\n' + json.dumps(value_x_sample) + \"\\n\\n\")\n",
+    "    convert_file.write(\"# output dict: \\n\")\n",
+    "    for number_sample, value_y_sample in ysample.items():\n",
+    "        convert_file.write(f'Sample number: {number_sample}' + '\\n' + json.dumps(value_y_sample) + \"\\n\\n\")"
+   ]
   }
  ],
  "metadata": {
